@@ -1,7 +1,7 @@
 preprocessQuantile <- function(object, fixOutliers=TRUE,
                                removeBadSamples=FALSE, badSampleCutoff=10.5,
                                quantileNormalize=TRUE, stratified=TRUE,
-                               mergeManifest=FALSE, sex=NULL, method = c("v1", "v2"), verbose=TRUE){
+                               mergeManifest=FALSE, sex=NULL, verbose=TRUE){
     ## We could use [Genomic]MethylSet if the object has been processed with preprocessRaw()
     if(! (is(object, "RGChannelSet") || is(object, "MethylSet") ||
           is(object, "GenomicMethylSet") ))
@@ -11,8 +11,7 @@ preprocessQuantile <- function(object, fixOutliers=TRUE,
         warning("preprocessQuantile has only been tested with 'preprocessRaw'")
     if (!is.null(sex))
         sex <- .checkSex(sex)
-    method <- match.arg(method)
-
+    
     if(verbose) message("[preprocessQuantile] Mapping to genome.\n")
     object <- mapToGenome(object, mergeManifest = mergeManifest)
     
@@ -54,9 +53,9 @@ preprocessQuantile <- function(object, fixOutliers=TRUE,
             regionType <- getIslandStatus(object)
             regionType[regionType %in% c("Shelf", "OpenSea")] <- "Far"
             U <- .qnormStratified(getUnmeth(object), auIndex,
-                                  xIndex, yIndex, sex, probeType, regionType, method = method)
+                                  xIndex, yIndex, sex, probeType, regionType)
             M <- .qnormStratified(getMeth(object), auIndex,
-                                  xIndex, yIndex, sex, probeType, regionType, method = method)
+                                  xIndex, yIndex, sex, probeType, regionType)
         }
     } else {
         U <- getUnmeth(object)
@@ -91,8 +90,8 @@ preprocessQuantile <- function(object, fixOutliers=TRUE,
     return(mat)
 }
 
-.qnormStratified <- function(mat, auIndex, xIndex, yIndex, sex=NULL, probeType, regionType, method = method){
-    mat[auIndex,] <- .qnormStratifiedHelper(mat[auIndex,], probeType[auIndex], regionType[auIndex], method = method)
+.qnormStratified <- function(mat, auIndex, xIndex, yIndex, sex=NULL, probeType, regionType){
+    mat[auIndex,] <- .qnormStratifiedHelper(mat[auIndex,], probeType[auIndex], regionType[auIndex])
     if(!is.null(sex)) {
         sexIndexes <- split(1:ncol(mat), sex)
     } else {
@@ -103,12 +102,12 @@ preprocessQuantile <- function(object, fixOutliers=TRUE,
     for(idxes in sexIndexes) {
         mat[c(xIndex, yIndex), idxes] <- .qnormStratifiedHelper(mat[c(xIndex, yIndex), idxes, drop=FALSE],
                                                                 probeType[c(xIndex, yIndex)],
-                                                                regionType[c(xIndex, yIndex)], method = method)
+                                                                regionType[c(xIndex, yIndex)])
     }
     return(mat)
 }
 
-.qnormStratifiedHelper <- function(mat, probeType, regionType, method) {
+.qnormStratifiedHelper <- function(mat, probeType, regionType) {
     if(ncol(mat) == 1)
         return(mat)
     if(length(probeType) != length(regionType))
@@ -121,15 +120,9 @@ preprocessQuantile <- function(object, fixOutliers=TRUE,
         Index1 <- which(inRegion & probeType == "I")
         Index2 <- which(inRegion & probeType == "II")
         mat[Index2,] <- preprocessCore::normalize.quantiles(mat[Index2,])
-        if(method == "v1") {
-            target <- approx(seq(along=Index2), sort(mat[Index2,1]),
-                             seq(1,length(Index2), length.out=length(Index1)))$y
-        }
-        if(method == "v2") {
-            target <- approx(seq(along=Index2), sort(mat[Index2,1]),
-                             seq(from = min(mat[Index2,1]), to = max(mat[Index2,1]),
-                                 length.out=length(Index1)))$y
-        }
+        target <- approx(seq(along=Index2), sort(mat[Index2,1]),
+                         seq(from = min(mat[Index2,1]), to = max(mat[Index2,1]),
+                             length.out=length(Index1)))$y
         mat[Index1,] <- preprocessCore::normalize.quantiles.use.target(mat[Index1,,drop=FALSE],
                                                                        target)
     }
